Fix description text overflow

--- a/src/public/less/components/package-header.less
+++ b/src/public/less/components/package-header.less
@@ -52,6 +52,7 @@
 		margin: 10px 0 0;
 		font-size: 15px;
 		font-weight: 600;
+		overflow-wrap: break-word;
 		opacity: .7;
 	}
 
